@@ -5,6 +5,8 @@ import com.busify.project.booking.repository.BookingRepository;
 import com.busify.project.bus_operator.repository.BusOperatorRepository;
 import com.busify.project.review.repository.ReviewRepository;
 import com.busify.project.common.utils.JwtUtils;
+import com.busify.project.audit_log.entity.AuditLog;
+import com.busify.project.audit_log.service.AuditLogService;
 import com.busify.project.user.repository.UserRepository;
 import com.busify.project.user.entity.User;
 import com.busify.project.employee.repository.EmployeeRepository;
@@ -35,6 +37,8 @@ import com.busify.project.trip.service.TripService;
 import com.busify.project.trip_seat.dto.SeatStatus;
 import com.busify.project.trip_seat.enums.TripSeatStatus;
 import com.busify.project.trip_seat.services.TripSeatService;
+import com.busify.project.ticket.service.TicketService;
+import com.busify.project.booking.service.BookingService;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -64,11 +68,18 @@ public class TripServiceImpl implements TripService {
     private BookingRepository bookingRepository;
     @Autowired
     private TripSeatService tripSeatService;
+    @Autowired
     private JwtUtils jwtUtils;
     @Autowired
     private UserRepository userRepository;
     @Autowired
     private EmployeeRepository employeeRepository;
+    @Autowired
+    private TicketService ticketService;
+    @Autowired
+    private BookingService bookingService;
+    @Autowired
+    private AuditLogService auditLogService;
 
     @Override
     public List<TripFilterResponseDTO> getAllTrips() {
@@ -82,8 +93,8 @@ public class TripServiceImpl implements TripService {
         // Lấy thông tin user hiện tại từ JWT
         Optional<String> currentUserEmail = jwtUtils.getCurrentUserLogin();
 
-        System.out.println("=== DEBUG: getTripsForCurrentDriver ===");
-        System.out.println("Current user email: " + currentUserEmail.orElse("NOT_FOUND"));
+//        System.out.println("=== DEBUG: getTripsForCurrentDriver ===");
+//        System.out.println("Current user email: " + currentUserEmail.orElse("NOT_FOUND"));
 
         if (currentUserEmail.isEmpty()) {
             throw new IllegalStateException("Người dùng chưa đăng nhập");
@@ -93,30 +104,30 @@ public class TripServiceImpl implements TripService {
         User currentUser = userRepository.findByEmailIgnoreCase(currentUserEmail.get())
                 .orElseThrow(() -> new IllegalStateException("Không tìm thấy thông tin người dùng"));
 
-        System.out.println("Current user ID: " + currentUser.getId());
-        System.out.println(
-                "Current user role: " + (currentUser.getRole() != null ? currentUser.getRole().getName() : "NO_ROLE"));
+        // System.out.println("Current user ID: " + currentUser.getId());
+        // System.out.println(
+        //         "Current user role: " + (currentUser.getRole() != null ? currentUser.getRole().getName() : "NO_ROLE"));
 
         // Kiểm tra xem user có phải là Employee không
-        Optional<Employee> employeeOpt = employeeRepository.findById(currentUser.getId());
-        if (employeeOpt.isPresent()) {
-            Employee employee = employeeOpt.get();
-            System.out.println("Found employee with ID: " + employee.getId());
-            System.out.println("Employee driver license: " + employee.getDriverLicenseNumber());
-        } else {
-            System.out.println("No employee found for user ID: " + currentUser.getId());
-        }
+        // Optional<Employee> employeeOpt = employeeRepository.findById(currentUser.getId());
+        // if (employeeOpt.isPresent()) {
+        //     Employee employee = employeeOpt.get();
+        //     System.out.println("Found employee with ID: " + employee.getId());
+        //     System.out.println("Employee driver license: " + employee.getDriverLicenseNumber());
+        // } else {
+        //     System.out.println("No employee found for user ID: " + currentUser.getId());
+        // }
 
         // Lấy tất cả trips và log thông tin driver
-        List<Trip> allTrips = tripRepository.findAll();
-        System.out.println("Total trips found: " + allTrips.size());
+        // List<Trip> allTrips = tripRepository.findAll();
+        // System.out.println("Total trips found: " + allTrips.size());
 
-        for (Trip trip : allTrips) {
-            System.out.println("Trip ID: " + trip.getId() +
-                    " | Driver: " + (trip.getDriver() != null ? trip.getDriver().getId() : "NULL") +
-                    " | Driver matches current user: "
-                    + (trip.getDriver() != null && trip.getDriver().getId().equals(currentUser.getId())));
-        }
+        // for (Trip trip : allTrips) {
+        //     System.out.println("Trip ID: " + trip.getId() +
+        //             " | Driver: " + (trip.getDriver() != null ? trip.getDriver().getId() : "NULL") +
+        //             " | Driver matches current user: "
+        //             + (trip.getDriver() != null && trip.getDriver().getId().equals(currentUser.getId())));
+        // }
 
         // Lấy trips của driver hiện tại
         List<TripFilterResponseDTO> result = tripRepository.findAll()
@@ -125,8 +136,8 @@ public class TripServiceImpl implements TripService {
                 .map(trip -> TripMapper.toDTO(trip, getAverageRating(trip.getId()), bookingRepository))
                 .collect(Collectors.toList());
 
-        System.out.println("Filtered trips for current driver: " + result.size());
-        System.out.println("=== END DEBUG ===");
+        // System.out.println("Filtered trips for current driver: " + result.size());
+        // System.out.println("=== END DEBUG ===");
 
         return result;
     }
@@ -158,7 +169,7 @@ public class TripServiceImpl implements TripService {
             return seatStatuses.stream().filter(status -> status.getStatus() == TripSeatStatus.available)
                     .count() >= filter
                             .getAvailableSeats();
-        }).collect(Collectors.toList());
+        }).toList();
 
         List<TripFilterResponseDTO> tripDTOs = filteredTrips.stream()
                 .filter(trip -> {
@@ -290,6 +301,8 @@ public class TripServiceImpl implements TripService {
             Trip trip = tripRepository.findById(tripId)
                     .orElseThrow(() -> new IllegalArgumentException("Không tìm thấy chuyến đi với ID: " + tripId));
 
+            TripStatus oldStatus = trip.getStatus();
+
             // Kiểm tra logic chuyển đổi trạng thái
             validateStatusTransition(trip.getStatus(), request.getStatus());
 
@@ -297,13 +310,52 @@ public class TripServiceImpl implements TripService {
             trip.setStatus(request.getStatus());
             tripRepository.save(trip);
 
+            // Audit log for trip status update
+            User currentUser = getCurrentUser();
+            AuditLog auditLog = new AuditLog();
+            auditLog.setAction("UPDATE");
+            auditLog.setTargetEntity("TRIP_STATUS");
+            auditLog.setTargetId(tripId);
+            auditLog.setDetails(String.format("{\"oldStatus\":\"%s\",\"newStatus\":\"%s\",\"reason\":\"%s\"}", 
+                    oldStatus, request.getStatus(), request.getReason()));
+            auditLog.setUser(currentUser);
+            auditLogService.save(auditLog);
+
+            // Logic tự động hủy vé khi trip chuyển sang departed
+            int cancelledTickets = 0;
+            if (request.getStatus() == TripStatus.departed) {
+                System.out.println("=== DEBUG: Trip status changed to departed, calling auto-cancel tickets ===");
+                cancelledTickets = ticketService.autoCancelValidTicketsWhenTripDeparted(tripId);
+                System.out.println("Auto-cancelled tickets count: " + cancelledTickets);
+            }
+
+            // Logic tự động hoàn thành booking khi trip chuyển sang arrived
+            int completedBookings = 0;
+            if (request.getStatus() == TripStatus.arrived) {
+                System.out.println("=== DEBUG: Trip status changed to arrived, calling auto-complete bookings ===");
+                completedBookings = bookingService.markBookingsAsCompletedWhenTripArrived(tripId);
+                System.out.println("Auto-completed bookings count: " + completedBookings);
+            }
+
             Map<String, Object> response = new HashMap<>();
             response.put("success", true);
             response.put("message", "Cập nhật trạng thái chuyến đi thành công");
             response.put("tripId", tripId);
-            response.put("oldStatus", trip.getStatus());
+            response.put("oldStatus", oldStatus);
             response.put("newStatus", request.getStatus());
             response.put("reason", request.getReason());
+
+            // Thêm thông tin về việc tự động hủy vé
+            if (cancelledTickets > 0) {
+                response.put("autoCancelledTickets", cancelledTickets);
+                response.put("autoCancelMessage", String.format("Đã tự động hủy %d vé chưa sử dụng do chuyến đi đã khởi hành", cancelledTickets));
+            }
+
+            // Thêm thông tin về việc tự động hoàn thành booking
+            if (completedBookings > 0) {
+                response.put("autoCompletedBookings", completedBookings);
+                response.put("autoCompleteMessage", String.format("Đã tự động hoàn thành %d booking do chuyến đi đã đến nơi", completedBookings));
+            }
 
             // Thêm thông tin chi tiết chuyến đi
             TripDetailResponse tripDetail = tripRepository.findTripDetailById(tripId);
@@ -331,32 +383,32 @@ public class TripServiceImpl implements TripService {
                     (currentStatus == TripStatus.arrived ? "hoàn thành" : "hủy"));
         }
 
-        if (currentStatus == TripStatus.on_time && newStatus == TripStatus.scheduled) {
-            throw new IllegalStateException("Không thể chuyển từ trạng thái on_time về scheduled");
+        if (currentStatus == TripStatus.on_sell && newStatus == TripStatus.scheduled) {
+            throw new IllegalStateException("Không thể chuyển từ trạng thái on_sell về scheduled");
         }
 
         if (currentStatus == TripStatus.departed && newStatus == TripStatus.scheduled) {
             throw new IllegalStateException("Không thể chuyển từ trạng thái departed về scheduled");
         }
 
-        if (currentStatus == TripStatus.departed && newStatus == TripStatus.on_time) {
-            throw new IllegalStateException("Không thể chuyển từ trạng thái departed về on_time");
+        if (currentStatus == TripStatus.departed && newStatus == TripStatus.on_sell) {
+            throw new IllegalStateException("Không thể chuyển từ trạng thái departed về on_sell");
         }
 
         // Chỉ cho phép chuyển đổi theo logic nghiệp vụ
         switch (currentStatus) {
             case scheduled:
-                if (newStatus != TripStatus.on_time && newStatus != TripStatus.delayed &&
+                if (newStatus != TripStatus.on_sell && newStatus != TripStatus.delayed &&
                         newStatus != TripStatus.cancelled) {
                     throw new IllegalStateException(
-                            "Từ trạng thái scheduled chỉ có thể chuyển sang on_time, delayed hoặc cancelled");
+                            "Từ trạng thái scheduled chỉ có thể chuyển sang on_sell, delayed hoặc cancelled");
                 }
                 break;
-            case on_time:
+            case on_sell:
                 if (newStatus != TripStatus.departed && newStatus != TripStatus.delayed &&
                         newStatus != TripStatus.cancelled) {
                     throw new IllegalStateException(
-                            "Từ trạng thái on_time chỉ có thể chuyển sang departed, delayed hoặc cancelled");
+                            "Từ trạng thái on_sell chỉ có thể chuyển sang departed, delayed hoặc cancelled");
                 }
                 break;
             case delayed:
@@ -433,6 +485,22 @@ public class TripServiceImpl implements TripService {
             LocalDate now = LocalDate.now();
             int reportYear = (year != null) ? year : now.getYear();
             return tripRepository.findTop10TripsByRevenueAndYear(reportYear);
+        }
+    }
+    
+    /**
+     * Helper method to get current user for audit logging
+     */
+    private User getCurrentUser() {
+        try {
+            String currentUserEmail = jwtUtils.getCurrentUserLogin().orElse(null);
+            if (currentUserEmail != null) {
+                return userRepository.findByEmail(currentUserEmail).orElse(null);
+            }
+            return null;
+        } catch (Exception e) {
+            // Return null if unable to get current user (e.g., system operations)
+            return null;
         }
     }
 }
